// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders highlighted lines if it's not a snapshot 1`] = `
<section
  className="LogPane "
>
  <code
    className="logLine0"
  >
    <span
      className={null}
      style={null}
    >
      hello
    </span>
  </code>
  <code
    className="logLine1"
  >
    <span
      className={null}
      style={null}
    >
      world
    </span>
  </code>
  <code
    className="logLine2 highlighted"
  >
    <span
      className={null}
      style={null}
    >
      foo
    </span>
  </code>
  <code
    className="logLine3 highlighted"
  >
    <span
      className={null}
      style={null}
    >
      bar
    </span>
  </code>
  <p
    className="logEnd"
  >
    █
  </p>
</section>
`;

exports[`renders logs 1`] = `
<section
  className="LogPane "
>
  <code
    className="logLine0"
  >
    <span
      className={null}
      style={null}
    >
      hello
    </span>
  </code>
  <code
    className="logLine1"
  >
    <span
      className={null}
      style={null}
    >
      world
    </span>
  </code>
  <code
    className="logLine2"
  >
    <span
      className={null}
      style={null}
    >
      foo
    </span>
  </code>
  <code
    className="logLine3"
  >
    <span
      className={null}
      style={null}
    >
      bar
    </span>
  </code>
  <p
    className="logEnd"
  >
    █
  </p>
</section>
`;

exports[`renders logs with leading whitespace and ANSI codes 1`] = `
<section
  className="LogPane "
>
  <code
    className="logLine0"
  >
    <span
      className={null}
      style={null}
    >
      [32mStarting Tilt (v0.7.10-dev, built 2019-04-10)…
    </span>
  </code>
  <code
    className="logLine1"
  >
    <span
      className={null}
      style={null}
    >
          [Tiltfile] Beginning Tiltfile execution
    </span>
  </code>
  <code
    className="logLine2"
  >
    <span
      className={null}
      style={null}
    >
          [Tiltfile] Running \`"whoami"\`
    </span>
  </code>
  <code
    className="logLine3"
  >
    <span
      className={null}
      style={null}
    >
          Installing Tilt NodeJS dependencies…
    </span>
  </code>
  <code
    className="logLine4"
  >
    <span
      className={null}
      style={null}
    >
          [Tiltfile] Running \`"m4 -Dvarowner=dan "deploy/fe.yaml""\`
    </span>
  </code>
  <code
    className="logLine5"
  >
    <span
      className={null}
      style={null}
    >
          [Tiltfile] Running \`"m4 -Dvarowner=dan "deploy/vigoda.yaml""\`
    </span>
  </code>
  <code
    className="logLine6"
  >
    <span
      className={null}
      style={null}
    >
          [Tiltfile] Running \`"m4 -Dvarowner=dan "deploy/snack.yaml""\`
    </span>
  </code>
  <code
    className="logLine7"
  >
    <span
      className={null}
      style={null}
    >
          [Tiltfile] Running \`"m4 -Dvarowner=dan "deploy/doggos.yaml""\`
    </span>
  </code>
  <code
    className="logLine8"
  >
    <span
      className={null}
      style={null}
    >
          [Tiltfile] Running \`"m4 -Dvarowner=dan "deploy/fortune.yaml""\`
    </span>
  </code>
  <code
    className="logLine9"
  >
    <span
      className={null}
      style={null}
    >
          [Tiltfile] Running \`"m4 -Dvarowner=dan "deploy/hypothesizer.yaml""\`
    </span>
  </code>
  <code
    className="logLine10"
  >
    <span
      className={null}
      style={null}
    >
          [Tiltfile] Running \`"m4 -Dvarowner=dan "deploy/spoonerisms.yaml""\`
    </span>
  </code>
  <code
    className="logLine11"
  >
    <span
      className={null}
      style={null}
    >
          [Tiltfile] Running \`"m4 -Dvarowner=dan "deploy/emoji.yaml""\`
    </span>
  </code>
  <code
    className="logLine12"
  >
    <span
      className={null}
      style={null}
    >
          [Tiltfile] Running \`"m4 -Dvarowner=dan "deploy/words.yaml""\`
    </span>
  </code>
  <code
    className="logLine13"
  >
    <span
      className={null}
      style={null}
    >
          [Tiltfile] Running \`"m4 -Dvarowner=dan "deploy/secrets.yaml""\`
    </span>
  </code>
  <code
    className="logLine14"
  >
    <span
      className={null}
      style={null}
    >
          [Tiltfile] Running \`"m4 -Dvarowner=dan "deploy/job.yaml""\`
    </span>
  </code>
  <code
    className="logLine15"
  >
    <span
      className={null}
      style={null}
    >
          [Tiltfile] Running \`"m4 -Dvarowner=dan "deploy/sleeper.yaml""\`
    </span>
  </code>
  <code
    className="logLine16"
  >
    <span
      className={null}
      style={null}
    >
          [Tiltfile] Running \`"m4 -Dvarowner=dan "deploy/hello_world.yaml""\`
    </span>
  </code>
  <code
    className="logLine17"
  >
    <span
      className={null}
      style={null}
    >
          [Tiltfile] Running \`"m4 -Dvarowner=dan "deploy/tick.yaml""\`
    </span>
  </code>
  <code
    className="logLine18"
  >
    <span
      className={null}
      style={null}
    >
          [Tiltfile] WARNING: This Tiltfile is using k8s resource assembly version 1, which has been deprecated. It will no longer be supported after 2019-04-17. Sorry for the inconvenience! See https://tilt.dev/resource_assembly_migration.html for information on how to migrate.
    </span>
  </code>
  <code
    className="logLine19"
  >
    <span
      className={null}
      style={null}
    >
          [Tiltfile]
    </span>
  </code>
  <code
    className="logLine20"
  >
    <span
      className={null}
      style={null}
    >
          [Tiltfile] Successfully loaded Tiltfile
    </span>
  </code>
  <code
    className="logLine21"
  >
    <span
      className={null}
      style={null}
    >
          
    </span>
    <span
      className="ansi-blue"
      style={null}
    >
        │ 
    </span>
    <span
      className={null}
      style={null}
    >
      Applying via kubectl
    </span>
  </code>
  <code
    className="logLine22"
  />
  <code
    className="logLine23"
  >
    <span
      className={null}
      style={null}
    >
          
    </span>
    <span
      className="ansi-blue"
      style={null}
    >
      ──┤ Building: 
    </span>
    <span
      className={null}
      style={null}
    >
      hello-world
    </span>
    <span
      className="ansi-blue"
      style={null}
    >
       ├──────────────────────────────────────────────
    </span>
  </code>
  <code
    className="logLine24"
  >
    <span
      className={null}
      style={null}
    >
          
    </span>
    <span
      className="ansi-blue"
      style={null}
    >
      STEP 1/1 — 
    </span>
    <span
      className={null}
      style={null}
    >
      Deploying
    </span>
  </code>
  <code
    className="logLine25"
  >
    <span
      className={null}
      style={null}
    >
          
    </span>
    <span
      className="ansi-blue"
      style={null}
    >
        │ 
    </span>
    <span
      className={null}
      style={null}
    >
      Parsing Kubernetes config YAML
    </span>
  </code>
  <code
    className="logLine26"
  >
    <span
      className={null}
      style={null}
    >
          
    </span>
    <span
      className="ansi-blue"
      style={null}
    >
        │ 
    </span>
    <span
      className={null}
      style={null}
    >
      Applying via kubectl
    </span>
  </code>
  <code
    className="logLine27"
  />
  <code
    className="logLine28"
  >
    <span
      className={null}
      style={null}
    >
          
    </span>
    <span
      className="ansi-blue"
      style={null}
    >
        │ 
    </span>
    <span
      className={null}
      style={null}
    >
      Step 1 - 4.138s
    </span>
  </code>
  <code
    className="logLine29"
  >
    <span
      className={null}
      style={null}
    >
          
    </span>
    <span
      className="ansi-blue"
      style={null}
    >
        │ 
    </span>
    <span
      className={null}
      style={null}
    >
      Done in: 4.138s
    </span>
  </code>
  <code
    className="logLine30"
  />
  <code
    className="logLine31"
  />
  <code
    className="logLine32"
  >
    <span
      className={null}
      style={null}
    >
          
    </span>
    <span
      className="ansi-blue"
      style={null}
    >
      ──┤ Building: 
    </span>
    <span
      className={null}
      style={null}
    >
      echo-hi
    </span>
    <span
      className="ansi-blue"
      style={null}
    >
       ├──────────────────────────────────────────────
    </span>
  </code>
  <code
    className="logLine33"
  >
    <span
      className={null}
      style={null}
    >
          
    </span>
    <span
      className="ansi-blue"
      style={null}
    >
      STEP 1/1 — 
    </span>
    <span
      className={null}
      style={null}
    >
      Deploying
    </span>
  </code>
  <code
    className="logLine34"
  >
    <span
      className={null}
      style={null}
    >
          
    </span>
    <span
      className="ansi-blue"
      style={null}
    >
        │ 
    </span>
    <span
      className={null}
      style={null}
    >
      Parsing Kubernetes config YAML
    </span>
  </code>
  <code
    className="logLine35"
  >
    <span
      className={null}
      style={null}
    >
          
    </span>
    <span
      className="ansi-blue"
      style={null}
    >
        │ 
    </span>
    <span
      className={null}
      style={null}
    >
      Applying via kubectl
    </span>
  </code>
  <code
    className="logLine36"
  />
  <code
    className="logLine37"
  >
    <span
      className={null}
      style={null}
    >
          
    </span>
    <span
      className="ansi-blue"
      style={null}
    >
        │ 
    </span>
    <span
      className={null}
      style={null}
    >
      Step 1 - 0.556s
    </span>
  </code>
  <code
    className="logLine38"
  >
    <span
      className={null}
      style={null}
    >
          
    </span>
    <span
      className="ansi-blue"
      style={null}
    >
        │ 
    </span>
    <span
      className={null}
      style={null}
    >
      Done in: 0.556s
    </span>
  </code>
  <code
    className="logLine39"
  />
  <code
    className="logLine40"
  />
  <code
    className="logLine41"
  >
    <span
      className={null}
      style={null}
    >
          
    </span>
    <span
      className="ansi-blue"
      style={null}
    >
      ──┤ Building: 
    </span>
    <span
      className={null}
      style={null}
    >
      tick
    </span>
    <span
      className="ansi-blue"
      style={null}
    >
       ├──────────────────────────────────────────────
    </span>
  </code>
  <code
    className="logLine42"
  >
    <span
      className={null}
      style={null}
    >
          
    </span>
    <span
      className="ansi-blue"
      style={null}
    >
      STEP 1/1 — 
    </span>
    <span
      className={null}
      style={null}
    >
      Deploying
    </span>
  </code>
  <code
    className="logLine43"
  >
    <span
      className={null}
      style={null}
    >
          
    </span>
    <span
      className="ansi-blue"
      style={null}
    >
        │ 
    </span>
    <span
      className={null}
      style={null}
    >
      Parsing Kubernetes config YAML
    </span>
  </code>
  <code
    className="logLine44"
  >
    <span
      className={null}
      style={null}
    >
          
    </span>
    <span
      className="ansi-blue"
      style={null}
    >
        │ 
    </span>
    <span
      className={null}
      style={null}
    >
      Applying via kubectl
    </span>
  </code>
  <code
    className="logLine45"
  />
  <code
    className="logLine46"
  >
    <span
      className={null}
      style={null}
    >
          
    </span>
    <span
      className="ansi-blue"
      style={null}
    >
        │ 
    </span>
    <span
      className={null}
      style={null}
    >
      Step 1 - 0.450s
    </span>
  </code>
  <code
    className="logLine47"
  >
    <span
      className={null}
      style={null}
    >
          
    </span>
    <span
      className="ansi-blue"
      style={null}
    >
        │ 
    </span>
    <span
      className={null}
      style={null}
    >
      Done in: 0.450s
    </span>
  </code>
  <code
    className="logLine48"
  />
  <code
    className="logLine49"
  />
  <code
    className="logLine50"
  >
    <span
      className={null}
      style={null}
    >
          
    </span>
    <span
      className="ansi-blue"
      style={null}
    >
      ──┤ Building: 
    </span>
    <span
      className={null}
      style={null}
    >
      fe
    </span>
    <span
      className="ansi-blue"
      style={null}
    >
       ├──────────────────────────────────────────────
    </span>
  </code>
  <code
    className="logLine51"
  >
    <span
      className={null}
      style={null}
    >
          
    </span>
    <span
      className="ansi-blue"
      style={null}
    >
      STEP 1/3 — 
    </span>
    <span
      className={null}
      style={null}
    >
      Building Dockerfile: [docker.io/library/fe]
    </span>
  </code>
  <code
    className="logLine52"
  >
    <span
      className={null}
      style={null}
    >
          Building Dockerfile:
    </span>
  </code>
  <code
    className="logLine53"
  >
    <span
      className={null}
      style={null}
    >
            FROM golang:1.10
    </span>
  </code>
  <code
    className="logLine54"
  />
  <code
    className="logLine55"
  >
    <span
      className={null}
      style={null}
    >
            RUN apt update && apt install -y unzip time make
    </span>
  </code>
  <code
    className="logLine56"
  />
  <code
    className="logLine57"
  >
    <span
      className={null}
      style={null}
    >
            ENV PROTOC_VERSION 3.5.1
    </span>
  </code>
  <code
    className="logLine58"
  />
  <code
    className="logLine59"
  >
    <span
      className={null}
      style={null}
    >
            RUN wget https://github.com/google/protobuf/releases/download/v\${PROTOC_VERSION}/protoc-\${PROTOC_VERSION}-linux-x86_64.zip &&         unzip protoc-\${PROTOC_VERSION}-linux-x86_64.zip -d protoc &&         mv protoc/bin/protoc /usr/bin/protoc
    </span>
  </code>
  <code
    className="logLine60"
  />
  <code
    className="logLine61"
  >
    <span
      className={null}
      style={null}
    >
            RUN go get github.com/golang/protobuf/protoc-gen-go
    </span>
  </code>
  <code
    className="logLine62"
  />
  <code
    className="logLine63"
  >
    <span
      className={null}
      style={null}
    >
            ADD . /go/src/github.com/windmilleng/servantes/fe
    </span>
  </code>
  <code
    className="logLine64"
  >
    <span
      className={null}
      style={null}
    >
            RUN go install github.com/windmilleng/servantes/fe
    </span>
  </code>
  <code
    className="logLine65"
  >
    <span
      className={null}
      style={null}
    >
            ENTRYPOINT /go/bin/fe
    </span>
  </code>
  <code
    className="logLine66"
  />
  <code
    className="logLine67"
  />
  <code
    className="logLine68"
  >
    <span
      className={null}
      style={null}
    >
          
    </span>
    <span
      className="ansi-blue"
      style={null}
    >
        │ 
    </span>
    <span
      className={null}
      style={null}
    >
      Tarring context…
    </span>
  </code>
  <code
    className="logLine69"
  >
    <span
      className={null}
      style={null}
    >
              ╎ Created tarball (size: 24 MB)
    </span>
  </code>
  <code
    className="logLine70"
  >
    <span
      className={null}
      style={null}
    >
          
    </span>
    <span
      className="ansi-blue"
      style={null}
    >
        │ 
    </span>
    <span
      className={null}
      style={null}
    >
      Building image
    </span>
  </code>
  <code
    className="logLine71"
  >
    <span
      className={null}
      style={null}
    >
              ╎ [1/6] FROM docker.io/library/golang:1.10
    </span>
  </code>
  <code
    className="logLine72"
  >
    <span
      className={null}
      style={null}
    >
              ╎ [2/6] RUN apt update && apt install -y unzip time make
    </span>
  </code>
  <code
    className="logLine73"
  >
    <span
      className={null}
      style={null}
    >
              ╎ [3/6] RUN wget https://github.com/google/protobuf/releases/download/v3.5.1/protoc-3.5.1-linux-x86_64.zip &&   unzip protoc-3.5.1-linux-x86_64.zip -d protoc &&   mv protoc/bin/protoc /usr/bin/protoc
    </span>
  </code>
  <code
    className="logLine74"
  >
    <span
      className={null}
      style={null}
    >
              ╎ [4/6] RUN go get github.com/golang/protobuf/protoc-gen-go
    </span>
  </code>
  <code
    className="logLine75"
  >
    <span
      className={null}
      style={null}
    >
              ╎ [5/6] ADD . /go/src/github.com/windmilleng/servantes/fe
    </span>
  </code>
  <code
    className="logLine76"
  >
    <span
      className={null}
      style={null}
    >
              ╎ [6/6] RUN go install github.com/windmilleng/servantes/fe
    </span>
  </code>
  <code
    className="logLine77"
  />
  <code
    className="logLine78"
  >
    <span
      className={null}
      style={null}
    >
          
    </span>
    <span
      className="ansi-blue"
      style={null}
    >
      STEP 2/3 — 
    </span>
    <span
      className={null}
      style={null}
    >
      Pushing gcr.io/windmill-public-containers/servantes/fe:tilt-2540b7769f4b0e45
    </span>
  </code>
  <code
    className="logLine79"
  >
    <span
      className={null}
      style={null}
    >
              ╎ Skipping push
    </span>
  </code>
  <code
    className="logLine80"
  />
  <code
    className="logLine81"
  >
    <span
      className={null}
      style={null}
    >
          
    </span>
    <span
      className="ansi-blue"
      style={null}
    >
      STEP 3/3 — 
    </span>
    <span
      className={null}
      style={null}
    >
      Deploying
    </span>
  </code>
  <code
    className="logLine82"
  >
    <span
      className={null}
      style={null}
    >
          
    </span>
    <span
      className="ansi-blue"
      style={null}
    >
        │ 
    </span>
    <span
      className={null}
      style={null}
    >
      Parsing Kubernetes config YAML
    </span>
  </code>
  <code
    className="logLine83"
  >
    <span
      className={null}
      style={null}
    >
          
    </span>
    <span
      className="ansi-blue"
      style={null}
    >
        │ 
    </span>
    <span
      className={null}
      style={null}
    >
      Applying via kubectl
    </span>
  </code>
  <code
    className="logLine84"
  />
  <code
    className="logLine85"
  >
    <span
      className={null}
      style={null}
    >
          
    </span>
    <span
      className="ansi-blue"
      style={null}
    >
        │ 
    </span>
    <span
      className={null}
      style={null}
    >
      Step 1 - 7.630s
    </span>
  </code>
  <code
    className="logLine86"
  >
    <span
      className={null}
      style={null}
    >
          
    </span>
    <span
      className="ansi-blue"
      style={null}
    >
        │ 
    </span>
    <span
      className={null}
      style={null}
    >
      Step 2 - 0.000s
    </span>
  </code>
  <code
    className="logLine87"
  >
    <span
      className={null}
      style={null}
    >
          
    </span>
    <span
      className="ansi-blue"
      style={null}
    >
        │ 
    </span>
    <span
      className={null}
      style={null}
    >
      Step 3 - 0.249s
    </span>
  </code>
  <code
    className="logLine88"
  >
    <span
      className={null}
      style={null}
    >
          
    </span>
    <span
      className="ansi-blue"
      style={null}
    >
        │ 
    </span>
    <span
      className={null}
      style={null}
    >
      Done in: 7.880s
    </span>
  </code>
  <code
    className="logLine89"
  />
  <code
    className="logLine90"
  />
  <code
    className="logLine91"
  >
    <span
      className={null}
      style={null}
    >
          
    </span>
    <span
      className="ansi-blue"
      style={null}
    >
      ──┤ Building: 
    </span>
    <span
      className={null}
      style={null}
    >
      vigoda
    </span>
    <span
      className="ansi-blue"
      style={null}
    >
       ├──────────────────────────────────────────────
    </span>
  </code>
  <code
    className="logLine92"
  >
    <span
      className={null}
      style={null}
    >
          
    </span>
    <span
      className="ansi-blue"
      style={null}
    >
      STEP 1/3 — 
    </span>
    <span
      className={null}
      style={null}
    >
      Building Dockerfile: [docker.io/library/vigoda]
    </span>
  </code>
  <code
    className="logLine93"
  >
    <span
      className={null}
      style={null}
    >
          Building Dockerfile:
    </span>
  </code>
  <code
    className="logLine94"
  >
    <span
      className={null}
      style={null}
    >
            FROM golang:1.10
    </span>
  </code>
  <code
    className="logLine95"
  />
  <code
    className="logLine96"
  >
    <span
      className={null}
      style={null}
    >
            ADD . /go/src/github.com/windmilleng/servantes/vigoda
    </span>
  </code>
  <code
    className="logLine97"
  >
    <span
      className={null}
      style={null}
    >
            RUN go install github.com/windmilleng/servantes/vigoda
    </span>
  </code>
  <code
    className="logLine98"
  />
  <code
    className="logLine99"
  >
    <span
      className={null}
      style={null}
    >
            ENTRYPOINT /go/bin/vigoda
    </span>
  </code>
  <code
    className="logLine100"
  />
  <code
    className="logLine101"
  >
    <span
      className={null}
      style={null}
    >
          
    </span>
    <span
      className="ansi-blue"
      style={null}
    >
        │ 
    </span>
    <span
      className={null}
      style={null}
    >
      Tarring context…
    </span>
  </code>
  <code
    className="logLine102"
  >
    <span
      className={null}
      style={null}
    >
              ╎ Created tarball (size: 8.7 kB)
    </span>
  </code>
  <code
    className="logLine103"
  >
    <span
      className={null}
      style={null}
    >
          
    </span>
    <span
      className="ansi-blue"
      style={null}
    >
        │ 
    </span>
    <span
      className={null}
      style={null}
    >
      Building image
    </span>
  </code>
  <code
    className="logLine104"
  >
    <span
      className={null}
      style={null}
    >
              ╎ [1/3] FROM docker.io/library/golang:1.10
    </span>
  </code>
  <code
    className="logLine105"
  >
    <span
      className={null}
      style={null}
    >
              ╎ [2/3] ADD . /go/src/github.com/windmilleng/servantes/vigoda
    </span>
  </code>
  <code
    className="logLine106"
  >
    <span
      className={null}
      style={null}
    >
              ╎ [3/3] RUN go install github.com/windmilleng/servantes/vigoda
    </span>
  </code>
  <code
    className="logLine107"
  />
  <code
    className="logLine108"
  >
    <span
      className={null}
      style={null}
    >
          
    </span>
    <span
      className="ansi-blue"
      style={null}
    >
      STEP 2/3 — 
    </span>
    <span
      className={null}
      style={null}
    >
      Pushing gcr.io/windmill-public-containers/servantes/vigoda:tilt-2d369271c8091f68
    </span>
  </code>
  <code
    className="logLine109"
  >
    <span
      className={null}
      style={null}
    >
              ╎ Skipping push
    </span>
  </code>
  <code
    className="logLine110"
  />
  <code
    className="logLine111"
  >
    <span
      className={null}
      style={null}
    >
          
    </span>
    <span
      className="ansi-blue"
      style={null}
    >
      STEP 3/3 — 
    </span>
    <span
      className={null}
      style={null}
    >
      Deploying
    </span>
  </code>
  <code
    className="logLine112"
  >
    <span
      className={null}
      style={null}
    >
          
    </span>
    <span
      className="ansi-blue"
      style={null}
    >
        │ 
    </span>
    <span
      className={null}
      style={null}
    >
      Parsing Kubernetes config YAML
    </span>
  </code>
  <code
    className="logLine113"
  >
    <span
      className={null}
      style={null}
    >
          
    </span>
    <span
      className="ansi-blue"
      style={null}
    >
        │ 
    </span>
    <span
      className={null}
      style={null}
    >
      Applying via kubectl
    </span>
  </code>
  <code
    className="logLine114"
  />
  <code
    className="logLine115"
  >
    <span
      className={null}
      style={null}
    >
          
    </span>
    <span
      className="ansi-blue"
      style={null}
    >
        │ 
    </span>
    <span
      className={null}
      style={null}
    >
      Step 1 - 1.017s
    </span>
  </code>
  <code
    className="logLine116"
  >
    <span
      className={null}
      style={null}
    >
          
    </span>
    <span
      className="ansi-blue"
      style={null}
    >
        │ 
    </span>
    <span
      className={null}
      style={null}
    >
      Step 2 - 0.000s
    </span>
  </code>
  <code
    className="logLine117"
  >
    <span
      className={null}
      style={null}
    >
          
    </span>
    <span
      className="ansi-blue"
      style={null}
    >
        │ 
    </span>
    <span
      className={null}
      style={null}
    >
      Step 3 - 0.168s
    </span>
  </code>
  <code
    className="logLine118"
  >
    <span
      className={null}
      style={null}
    >
          
    </span>
    <span
      className="ansi-blue"
      style={null}
    >
        │ 
    </span>
    <span
      className={null}
      style={null}
    >
      Done in: 1.185s
    </span>
  </code>
  <code
    className="logLine119"
  />
  <code
    className="logLine120"
  />
  <code
    className="logLine121"
  >
    <span
      className={null}
      style={null}
    >
          
    </span>
    <span
      className="ansi-blue"
      style={null}
    >
      ──┤ Building: 
    </span>
    <span
      className={null}
      style={null}
    >
      snack
    </span>
    <span
      className="ansi-blue"
      style={null}
    >
       ├──────────────────────────────────────────────
    </span>
  </code>
  <code
    className="logLine122"
  >
    <span
      className={null}
      style={null}
    >
          
    </span>
    <span
      className="ansi-blue"
      style={null}
    >
      STEP 1/3 — 
    </span>
    <span
      className={null}
      style={null}
    >
      Building Dockerfile: [docker.io/library/snack]
    </span>
  </code>
  <code
    className="logLine123"
  >
    <span
      className={null}
      style={null}
    >
          Building Dockerfile:
    </span>
  </code>
  <code
    className="logLine124"
  >
    <span
      className={null}
      style={null}
    >
            FROM golang:1.10
    </span>
  </code>
  <code
    className="logLine125"
  />
  <code
    className="logLine126"
  >
    <span
      className={null}
      style={null}
    >
            ADD . /go/src/github.com/windmilleng/servantes/snack
    </span>
  </code>
  <code
    className="logLine127"
  >
    <span
      className={null}
      style={null}
    >
            RUN go install github.com/windmilleng/servantes/snack
    </span>
  </code>
  <code
    className="logLine128"
  />
  <code
    className="logLine129"
  >
    <span
      className={null}
      style={null}
    >
            ENTRYPOINT /go/bin/snack
    </span>
  </code>
  <code
    className="logLine130"
  />
  <code
    className="logLine131"
  >
    <span
      className={null}
      style={null}
    >
          
    </span>
    <span
      className="ansi-blue"
      style={null}
    >
        │ 
    </span>
    <span
      className={null}
      style={null}
    >
      Tarring context…
    </span>
  </code>
  <code
    className="logLine132"
  >
    <span
      className={null}
      style={null}
    >
              ╎ Created tarball (size: 9.7 kB)
    </span>
  </code>
  <code
    className="logLine133"
  >
    <span
      className={null}
      style={null}
    >
          
    </span>
    <span
      className="ansi-blue"
      style={null}
    >
        │ 
    </span>
    <span
      className={null}
      style={null}
    >
      Building image
    </span>
  </code>
  <code
    className="logLine134"
  >
    <span
      className={null}
      style={null}
    >
              ╎ [1/3] FROM docker.io/library/golang:1.10
    </span>
  </code>
  <code
    className="logLine135"
  >
    <span
      className={null}
      style={null}
    >
          Starting Tilt webpack server…
    </span>
  </code>
  <code
    className="logLine136"
  >
    <span
      className={null}
      style={null}
    >
          fe          ┊ 2019/04/10 15:37:37 Starting Servantes FE on :8080
    </span>
  </code>
  <code
    className="logLine137"
  >
    <span
      className={null}
      style={null}
    >
              ╎ [2/3] ADD . /go/src/github.com/windmilleng/servantes/snack
    </span>
  </code>
  <code
    className="logLine138"
  >
    <span
      className={null}
      style={null}
    >
              ╎ [3/3] RUN go install github.com/windmilleng/servantes/snack
    </span>
  </code>
  <code
    className="logLine139"
  />
  <code
    className="logLine140"
  >
    <span
      className={null}
      style={null}
    >
          
    </span>
    <span
      className="ansi-blue"
      style={null}
    >
      STEP 2/3 — 
    </span>
    <span
      className={null}
      style={null}
    >
      Pushing gcr.io/windmill-public-containers/servantes/snack:tilt-731280d503bbbcf5
    </span>
  </code>
  <code
    className="logLine141"
  >
    <span
      className={null}
      style={null}
    >
              ╎ Skipping push
    </span>
  </code>
  <code
    className="logLine142"
  />
  <code
    className="logLine143"
  >
    <span
      className={null}
      style={null}
    >
          
    </span>
    <span
      className="ansi-blue"
      style={null}
    >
      STEP 3/3 — 
    </span>
    <span
      className={null}
      style={null}
    >
      Deploying
    </span>
  </code>
  <code
    className="logLine144"
  >
    <span
      className={null}
      style={null}
    >
          
    </span>
    <span
      className="ansi-blue"
      style={null}
    >
        │ 
    </span>
    <span
      className={null}
      style={null}
    >
      Parsing Kubernetes config YAML
    </span>
  </code>
  <code
    className="logLine145"
  >
    <span
      className={null}
      style={null}
    >
          
    </span>
    <span
      className="ansi-blue"
      style={null}
    >
        │ 
    </span>
    <span
      className={null}
      style={null}
    >
      Applying via kubectl
    </span>
  </code>
  <code
    className="logLine146"
  />
  <code
    className="logLine147"
  >
    <span
      className={null}
      style={null}
    >
          
    </span>
    <span
      className="ansi-blue"
      style={null}
    >
        │ 
    </span>
    <span
      className={null}
      style={null}
    >
      Step 1 - 2.878s
    </span>
  </code>
  <code
    className="logLine148"
  >
    <span
      className={null}
      style={null}
    >
          
    </span>
    <span
      className="ansi-blue"
      style={null}
    >
        │ 
    </span>
    <span
      className={null}
      style={null}
    >
      Step 2 - 0.000s
    </span>
  </code>
  <code
    className="logLine149"
  >
    <span
      className={null}
      style={null}
    >
          
    </span>
    <span
      className="ansi-blue"
      style={null}
    >
        │ 
    </span>
    <span
      className={null}
      style={null}
    >
      Step 3 - 0.322s
    </span>
  </code>
  <code
    className="logLine150"
  >
    <span
      className={null}
      style={null}
    >
          
    </span>
    <span
      className="ansi-blue"
      style={null}
    >
        │ 
    </span>
    <span
      className={null}
      style={null}
    >
      Done in: 3.200s
    </span>
  </code>
  <code
    className="logLine151"
  />
  <code
    className="logLine152"
  />
  <code
    className="logLine153"
  >
    <span
      className={null}
      style={null}
    >
          
    </span>
    <span
      className="ansi-blue"
      style={null}
    >
      ──┤ Building: 
    </span>
    <span
      className={null}
      style={null}
    >
      doggos
    </span>
    <span
      className="ansi-blue"
      style={null}
    >
       ├──────────────────────────────────────────────
    </span>
  </code>
  <code
    className="logLine154"
  >
    <span
      className={null}
      style={null}
    >
          
    </span>
    <span
      className="ansi-blue"
      style={null}
    >
      STEP 1/5 — 
    </span>
    <span
      className={null}
      style={null}
    >
      Building Dockerfile: [docker.io/library/doggos]
    </span>
  </code>
  <code
    className="logLine155"
  >
    <span
      className={null}
      style={null}
    >
          Building Dockerfile:
    </span>
  </code>
  <code
    className="logLine156"
  >
    <span
      className={null}
      style={null}
    >
            FROM golang:1.10
    </span>
  </code>
  <code
    className="logLine157"
  />
  <code
    className="logLine158"
  >
    <span
      className={null}
      style={null}
    >
            ADD . /go/src/github.com/windmilleng/servantes/doggos
    </span>
  </code>
  <code
    className="logLine159"
  >
    <span
      className={null}
      style={null}
    >
            RUN go install github.com/windmilleng/servantes/doggos
    </span>
  </code>
  <code
    className="logLine160"
  />
  <code
    className="logLine161"
  >
    <span
      className={null}
      style={null}
    >
            ENTRYPOINT /go/bin/doggos
    </span>
  </code>
  <code
    className="logLine162"
  />
  <code
    className="logLine163"
  >
    <span
      className={null}
      style={null}
    >
          
    </span>
    <span
      className="ansi-blue"
      style={null}
    >
        │ 
    </span>
    <span
      className={null}
      style={null}
    >
      Tarring context…
    </span>
  </code>
  <code
    className="logLine164"
  >
    <span
      className={null}
      style={null}
    >
              ╎ Created tarball (size: 7.7 kB)
    </span>
  </code>
  <code
    className="logLine165"
  >
    <span
      className={null}
      style={null}
    >
          
    </span>
    <span
      className="ansi-blue"
      style={null}
    >
        │ 
    </span>
    <span
      className={null}
      style={null}
    >
      Building image
    </span>
  </code>
  <code
    className="logLine166"
  >
    <span
      className={null}
      style={null}
    >
          vigoda      ┊ 2019/04/10 15:37:39 Starting Vigoda Health Check Service on :8081
    </span>
  </code>
  <code
    className="logLine167"
  >
    <span
      className={null}
      style={null}
    >
              ╎ [1/3] FROM docker.io/library/golang:1.10
    </span>
  </code>
  <code
    className="logLine168"
  >
    <span
      className={null}
      style={null}
    >
              ╎ [2/3] ADD . /go/src/github.com/windmilleng/servantes/doggos
    </span>
  </code>
  <code
    className="logLine169"
  >
    <span
      className={null}
      style={null}
    >
              ╎ [3/3] RUN go install github.com/windmilleng/servantes/doggos
    </span>
  </code>
  <code
    className="logLine170"
  />
  <code
    className="logLine171"
  >
    <span
      className={null}
      style={null}
    >
          
    </span>
    <span
      className="ansi-blue"
      style={null}
    >
      STEP 2/5 — 
    </span>
    <span
      className={null}
      style={null}
    >
      Pushing gcr.io/windmill-public-containers/servantes/doggos:tilt-28a4e6fab0991d2f
    </span>
  </code>
  <code
    className="logLine172"
  >
    <span
      className={null}
      style={null}
    >
              ╎ Skipping push
    </span>
  </code>
  <code
    className="logLine173"
  />
  <code
    className="logLine174"
  >
    <span
      className={null}
      style={null}
    >
          
    </span>
    <span
      className="ansi-blue"
      style={null}
    >
      STEP 3/5 — 
    </span>
    <span
      className={null}
      style={null}
    >
      Building Dockerfile: [docker.io/library/sidecar]
    </span>
  </code>
  <code
    className="logLine175"
  >
    <span
      className={null}
      style={null}
    >
          Building Dockerfile:
    </span>
  </code>
  <code
    className="logLine176"
  >
    <span
      className={null}
      style={null}
    >
            FROM alpine
    </span>
  </code>
  <code
    className="logLine177"
  />
  <code
    className="logLine178"
  >
    <span
      className={null}
      style={null}
    >
            ADD loud_sidecar.sh /
    </span>
  </code>
  <code
    className="logLine179"
  >
    <span
      className={null}
      style={null}
    >
            ENTRYPOINT ["/loud_sidecar.sh"]
    </span>
  </code>
  <code
    className="logLine180"
  />
  <code
    className="logLine181"
  />
  <code
    className="logLine182"
  >
    <span
      className={null}
      style={null}
    >
          
    </span>
    <span
      className="ansi-blue"
      style={null}
    >
        │ 
    </span>
    <span
      className={null}
      style={null}
    >
      Tarring context…
    </span>
  </code>
  <code
    className="logLine183"
  >
    <span
      className={null}
      style={null}
    >
              ╎ Created tarball (size: 4.6 kB)
    </span>
  </code>
  <code
    className="logLine184"
  >
    <span
      className={null}
      style={null}
    >
          
    </span>
    <span
      className="ansi-blue"
      style={null}
    >
        │ 
    </span>
    <span
      className={null}
      style={null}
    >
      Building image
    </span>
  </code>
  <code
    className="logLine185"
  >
    <span
      className={null}
      style={null}
    >
          vigoda      ┊ 2019/04/10 15:37:41 Server status: All good
    </span>
  </code>
  <code
    className="logLine186"
  >
    <span
      className={null}
      style={null}
    >
              ╎ [1/2] FROM docker.io/library/alpine
    </span>
  </code>
  <code
    className="logLine187"
  >
    <span
      className={null}
      style={null}
    >
              ╎ [2/2] ADD loud_sidecar.sh /
    </span>
  </code>
  <code
    className="logLine188"
  />
  <code
    className="logLine189"
  >
    <span
      className={null}
      style={null}
    >
          
    </span>
    <span
      className="ansi-blue"
      style={null}
    >
      STEP 4/5 — 
    </span>
    <span
      className={null}
      style={null}
    >
      Pushing gcr.io/windmill-public-containers/servantes/sidecar:tilt-4fb31b5179f3ad01
    </span>
  </code>
  <code
    className="logLine190"
  >
    <span
      className={null}
      style={null}
    >
              ╎ Skipping push
    </span>
  </code>
  <code
    className="logLine191"
  />
  <code
    className="logLine192"
  >
    <span
      className={null}
      style={null}
    >
          
    </span>
    <span
      className="ansi-blue"
      style={null}
    >
      STEP 5/5 — 
    </span>
    <span
      className={null}
      style={null}
    >
      Deploying
    </span>
  </code>
  <code
    className="logLine193"
  >
    <span
      className={null}
      style={null}
    >
          
    </span>
    <span
      className="ansi-blue"
      style={null}
    >
        │ 
    </span>
    <span
      className={null}
      style={null}
    >
      Parsing Kubernetes config YAML
    </span>
  </code>
  <code
    className="logLine194"
  >
    <span
      className={null}
      style={null}
    >
          
    </span>
    <span
      className="ansi-blue"
      style={null}
    >
        │ 
    </span>
    <span
      className={null}
      style={null}
    >
      Applying via kubectl
    </span>
  </code>
  <code
    className="logLine195"
  />
  <code
    className="logLine196"
  >
    <span
      className={null}
      style={null}
    >
          
    </span>
    <span
      className="ansi-blue"
      style={null}
    >
        │ 
    </span>
    <span
      className={null}
      style={null}
    >
      Step 1 - 1.629s
    </span>
  </code>
  <code
    className="logLine197"
  >
    <span
      className={null}
      style={null}
    >
          
    </span>
    <span
      className="ansi-blue"
      style={null}
    >
        │ 
    </span>
    <span
      className={null}
      style={null}
    >
      Step 2 - 0.000s
    </span>
  </code>
  <code
    className="logLine198"
  >
    <span
      className={null}
      style={null}
    >
          
    </span>
    <span
      className="ansi-blue"
      style={null}
    >
        │ 
    </span>
    <span
      className={null}
      style={null}
    >
      Step 3 - 2.024s
    </span>
  </code>
  <code
    className="logLine199"
  >
    <span
      className={null}
      style={null}
    >
          
    </span>
    <span
      className="ansi-blue"
      style={null}
    >
        │ 
    </span>
    <span
      className={null}
      style={null}
    >
      Step 4 - 0.000s
    </span>
  </code>
  <code
    className="logLine200"
  >
    <span
      className={null}
      style={null}
    >
          
    </span>
    <span
      className="ansi-blue"
      style={null}
    >
        │ 
    </span>
    <span
      className={null}
      style={null}
    >
      Step 5 - 0.218s
    </span>
  </code>
  <code
    className="logLine201"
  >
    <span
      className={null}
      style={null}
    >
          
    </span>
    <span
      className="ansi-blue"
      style={null}
    >
        │ 
    </span>
    <span
      className={null}
      style={null}
    >
      Done in: 3.871s
    </span>
  </code>
  <code
    className="logLine202"
  />
  <code
    className="logLine203"
  />
  <code
    className="logLine204"
  >
    <span
      className={null}
      style={null}
    >
          
    </span>
    <span
      className="ansi-blue"
      style={null}
    >
      ──┤ Building: 
    </span>
    <span
      className={null}
      style={null}
    >
      fortune
    </span>
    <span
      className="ansi-blue"
      style={null}
    >
       ├──────────────────────────────────────────────
    </span>
  </code>
  <code
    className="logLine205"
  >
    <span
      className={null}
      style={null}
    >
          
    </span>
    <span
      className="ansi-blue"
      style={null}
    >
      STEP 1/3 — 
    </span>
    <span
      className={null}
      style={null}
    >
      Building Dockerfile: [docker.io/library/fortune]
    </span>
  </code>
  <code
    className="logLine206"
  >
    <span
      className={null}
      style={null}
    >
          Building Dockerfile:
    </span>
  </code>
  <code
    className="logLine207"
  >
    <span
      className={null}
      style={null}
    >
            FROM golang:1.10
    </span>
  </code>
  <code
    className="logLine208"
  />
  <code
    className="logLine209"
  >
    <span
      className={null}
      style={null}
    >
            RUN apt update && apt install -y unzip time make
    </span>
  </code>
  <code
    className="logLine210"
  />
  <code
    className="logLine211"
  >
    <span
      className={null}
      style={null}
    >
            ENV PROTOC_VERSION 3.5.1
    </span>
  </code>
  <code
    className="logLine212"
  />
  <code
    className="logLine213"
  >
    <span
      className={null}
      style={null}
    >
            RUN wget https://github.com/google/protobuf/releases/download/v\${PROTOC_VERSION}/protoc-\${PROTOC_VERSION}-linux-x86_64.zip &&         unzip protoc-\${PROTOC_VERSION}-linux-x86_64.zip -d protoc &&         mv protoc/bin/protoc /usr/bin/protoc
    </span>
  </code>
  <code
    className="logLine214"
  />
  <code
    className="logLine215"
  >
    <span
      className={null}
      style={null}
    >
            RUN go get github.com/golang/protobuf/protoc-gen-go
    </span>
  </code>
  <code
    className="logLine216"
  />
  <code
    className="logLine217"
  >
    <span
      className={null}
      style={null}
    >
            ADD . /go/src/github.com/windmilleng/servantes/fortune
    </span>
  </code>
  <code
    className="logLine218"
  >
    <span
      className={null}
      style={null}
    >
            RUN cd /go/src/github.com/windmilleng/servantes/fortune && make proto
    </span>
  </code>
  <code
    className="logLine219"
  >
    <span
      className={null}
      style={null}
    >
            RUN go install github.com/windmilleng/servantes/fortune
    </span>
  </code>
  <code
    className="logLine220"
  />
  <code
    className="logLine221"
  >
    <span
      className={null}
      style={null}
    >
            ENTRYPOINT /go/bin/fortune
    </span>
  </code>
  <code
    className="logLine222"
  />
  <code
    className="logLine223"
  />
  <code
    className="logLine224"
  >
    <span
      className={null}
      style={null}
    >
          
    </span>
    <span
      className="ansi-blue"
      style={null}
    >
        │ 
    </span>
    <span
      className={null}
      style={null}
    >
      Tarring context…
    </span>
  </code>
  <code
    className="logLine225"
  >
    <span
      className={null}
      style={null}
    >
              ╎ Created tarball (size: 16 kB)
    </span>
  </code>
  <code
    className="logLine226"
  >
    <span
      className={null}
      style={null}
    >
          
    </span>
    <span
      className="ansi-blue"
      style={null}
    >
        │ 
    </span>
    <span
      className={null}
      style={null}
    >
      Building image
    </span>
  </code>
  <code
    className="logLine227"
  >
    <span
      className={null}
      style={null}
    >
          snack       ┊ 2019/04/10 15:37:41 Starting Snack Service on :8083
    </span>
  </code>
  <code
    className="logLine228"
  >
    <span
      className={null}
      style={null}
    >
          vigoda      ┊ 2019/04/10 15:37:43 Server status: All good
    </span>
  </code>
  <code
    className="logLine229"
  >
    <span
      className={null}
      style={null}
    >
              ╎ [1/7] FROM docker.io/library/golang:1.10
    </span>
  </code>
  <code
    className="logLine230"
  >
    <span
      className={null}
      style={null}
    >
              ╎ [2/7] RUN apt update && apt install -y unzip time make
    </span>
  </code>
  <code
    className="logLine231"
  >
    <span
      className={null}
      style={null}
    >
              ╎ [3/7] RUN wget https://github.com/google/protobuf/releases/download/v3.5.1/protoc-3.5.1-linux-x86_64.zip &&   unzip protoc-3.5.1-linux-x86_64.zip -d protoc &&   mv protoc/bin/protoc /usr/bin/protoc
    </span>
  </code>
  <code
    className="logLine232"
  >
    <span
      className={null}
      style={null}
    >
              ╎ [4/7] RUN go get github.com/golang/protobuf/protoc-gen-go
    </span>
  </code>
  <code
    className="logLine233"
  >
    <span
      className={null}
      style={null}
    >
              ╎ [5/7] ADD . /go/src/github.com/windmilleng/servantes/fortune
    </span>
  </code>
  <code
    className="logLine234"
  >
    <span
      className={null}
      style={null}
    >
              ╎ [6/7] RUN cd /go/src/github.com/windmilleng/servantes/fortune && make proto
    </span>
  </code>
  <code
    className="logLine235"
  >
    <span
      className={null}
      style={null}
    >
              ╎ [7/7] RUN go install github.com/windmilleng/servantes/fortune
    </span>
  </code>
  <code
    className="logLine236"
  />
  <code
    className="logLine237"
  >
    <span
      className={null}
      style={null}
    >
          
    </span>
    <span
      className="ansi-blue"
      style={null}
    >
      STEP 2/3 — 
    </span>
    <span
      className={null}
      style={null}
    >
      Pushing gcr.io/windmill-public-containers/servantes/fortune:tilt-7e4331cb0b073360
    </span>
  </code>
  <code
    className="logLine238"
  >
    <span
      className={null}
      style={null}
    >
              ╎ Skipping push
    </span>
  </code>
  <code
    className="logLine239"
  />
  <code
    className="logLine240"
  >
    <span
      className={null}
      style={null}
    >
          
    </span>
    <span
      className="ansi-blue"
      style={null}
    >
      STEP 3/3 — 
    </span>
    <span
      className={null}
      style={null}
    >
      Deploying
    </span>
  </code>
  <code
    className="logLine241"
  >
    <span
      className={null}
      style={null}
    >
          
    </span>
    <span
      className="ansi-blue"
      style={null}
    >
        │ 
    </span>
    <span
      className={null}
      style={null}
    >
      Parsing Kubernetes config YAML
    </span>
  </code>
  <code
    className="logLine242"
  >
    <span
      className={null}
      style={null}
    >
          
    </span>
    <span
      className="ansi-blue"
      style={null}
    >
        │ 
    </span>
    <span
      className={null}
      style={null}
    >
      Applying via kubectl
    </span>
  </code>
  <code
    className="logLine243"
  />
  <code
    className="logLine244"
  >
    <span
      className={null}
      style={null}
    >
          
    </span>
    <span
      className="ansi-blue"
      style={null}
    >
        │ 
    </span>
    <span
      className={null}
      style={null}
    >
      Step 1 - 1.634s
    </span>
  </code>
  <code
    className="logLine245"
  >
    <span
      className={null}
      style={null}
    >
          
    </span>
    <span
      className="ansi-blue"
      style={null}
    >
        │ 
    </span>
    <span
      className={null}
      style={null}
    >
      Step 2 - 0.000s
    </span>
  </code>
  <code
    className="logLine246"
  >
    <span
      className={null}
      style={null}
    >
          
    </span>
    <span
      className="ansi-blue"
      style={null}
    >
        │ 
    </span>
    <span
      className={null}
      style={null}
    >
      Step 3 - 0.279s
    </span>
  </code>
  <code
    className="logLine247"
  >
    <span
      className={null}
      style={null}
    >
          
    </span>
    <span
      className="ansi-blue"
      style={null}
    >
        │ 
    </span>
    <span
      className={null}
      style={null}
    >
      Done in: 1.914s
    </span>
  </code>
  <code
    className="logLine248"
  />
  <code
    className="logLine249"
  />
  <code
    className="logLine250"
  >
    <span
      className={null}
      style={null}
    >
          
    </span>
    <span
      className="ansi-blue"
      style={null}
    >
      ──┤ Building: 
    </span>
    <span
      className={null}
      style={null}
    >
      hypothesizer
    </span>
    <span
      className="ansi-blue"
      style={null}
    >
       ├──────────────────────────────────────────────
    </span>
  </code>
  <code
    className="logLine251"
  >
    <span
      className={null}
      style={null}
    >
          
    </span>
    <span
      className="ansi-blue"
      style={null}
    >
      STEP 1/3 — 
    </span>
    <span
      className={null}
      style={null}
    >
      Building Dockerfile: [docker.io/library/hypothesizer]
    </span>
  </code>
  <code
    className="logLine252"
  >
    <span
      className={null}
      style={null}
    >
          Building Dockerfile:
    </span>
  </code>
  <code
    className="logLine253"
  >
    <span
      className={null}
      style={null}
    >
            FROM python:3.6
    </span>
  </code>
  <code
    className="logLine254"
  />
  <code
    className="logLine255"
  >
    <span
      className={null}
      style={null}
    >
            ADD . /app
    </span>
  </code>
  <code
    className="logLine256"
  >
    <span
      className={null}
      style={null}
    >
            RUN cd /app && pip install -r requirements.txt
    </span>
  </code>
  <code
    className="logLine257"
  />
  <code
    className="logLine258"
  >
    <span
      className={null}
      style={null}
    >
          
    </span>
    <span
      className="ansi-blue"
      style={null}
    >
        │ 
    </span>
    <span
      className={null}
      style={null}
    >
      Tarring context…
    </span>
  </code>
  <code
    className="logLine259"
  >
    <span
      className={null}
      style={null}
    >
              ╎ Created tarball (size: 6.1 kB)
    </span>
  </code>
  <code
    className="logLine260"
  >
    <span
      className={null}
      style={null}
    >
          
    </span>
    <span
      className="ansi-blue"
      style={null}
    >
        │ 
    </span>
    <span
      className={null}
      style={null}
    >
      Building image
    </span>
  </code>
  <code
    className="logLine261"
  >
    <span
      className={null}
      style={null}
    >
          vigoda      ┊ 2019/04/10 15:37:45 Server status: All good
    </span>
  </code>
  <code
    className="logLine262"
  >
    <span
      className={null}
      style={null}
    >
              ╎ [1/3] FROM docker.io/library/python:3.6@sha256:fcbf363c285f331894b33f2577e0426182b989c750133a989abaaa4edea324e9
    </span>
  </code>
  <code
    className="logLine263"
  >
    <span
      className={null}
      style={null}
    >
              ╎ [2/3] ADD . /app
    </span>
  </code>
  <code
    className="logLine264"
  >
    <span
      className={null}
      style={null}
    >
              ╎ [3/3] RUN cd /app && pip install -r requirements.txt
    </span>
  </code>
  <code
    className="logLine265"
  />
  <code
    className="logLine266"
  >
    <span
      className={null}
      style={null}
    >
          
    </span>
    <span
      className="ansi-blue"
      style={null}
    >
      STEP 2/3 — 
    </span>
    <span
      className={null}
      style={null}
    >
      Pushing gcr.io/windmill-public-containers/servantes/hypothesizer:tilt-e2e22b5b98437e29
    </span>
  </code>
  <code
    className="logLine267"
  >
    <span
      className={null}
      style={null}
    >
              ╎ Skipping push
    </span>
  </code>
  <code
    className="logLine268"
  />
  <code
    className="logLine269"
  >
    <span
      className={null}
      style={null}
    >
          
    </span>
    <span
      className="ansi-blue"
      style={null}
    >
      STEP 3/3 — 
    </span>
    <span
      className={null}
      style={null}
    >
      Deploying
    </span>
  </code>
  <code
    className="logLine270"
  >
    <span
      className={null}
      style={null}
    >
          
    </span>
    <span
      className="ansi-blue"
      style={null}
    >
        │ 
    </span>
    <span
      className={null}
      style={null}
    >
      Parsing Kubernetes config YAML
    </span>
  </code>
  <code
    className="logLine271"
  >
    <span
      className={null}
      style={null}
    >
          
    </span>
    <span
      className="ansi-blue"
      style={null}
    >
        │ 
    </span>
    <span
      className={null}
      style={null}
    >
      Applying via kubectl
    </span>
  </code>
  <code
    className="logLine272"
  />
  <code
    className="logLine273"
  >
    <span
      className={null}
      style={null}
    >
          
    </span>
    <span
      className="ansi-blue"
      style={null}
    >
        │ 
    </span>
    <span
      className={null}
      style={null}
    >
      Step 1 - 2.119s
    </span>
  </code>
  <code
    className="logLine274"
  >
    <span
      className={null}
      style={null}
    >
          
    </span>
    <span
      className="ansi-blue"
      style={null}
    >
        │ 
    </span>
    <span
      className={null}
      style={null}
    >
      Step 2 - 0.000s
    </span>
  </code>
  <code
    className="logLine275"
  >
    <span
      className={null}
      style={null}
    >
          
    </span>
    <span
      className="ansi-blue"
      style={null}
    >
        │ 
    </span>
    <span
      className={null}
      style={null}
    >
      Step 3 - 0.517s
    </span>
  </code>
  <code
    className="logLine276"
  >
    <span
      className={null}
      style={null}
    >
          
    </span>
    <span
      className="ansi-blue"
      style={null}
    >
        │ 
    </span>
    <span
      className={null}
      style={null}
    >
      Done in: 2.636s
    </span>
  </code>
  <code
    className="logLine277"
  />
  <code
    className="logLine278"
  />
  <code
    className="logLine279"
  >
    <span
      className={null}
      style={null}
    >
          
    </span>
    <span
      className="ansi-blue"
      style={null}
    >
      ──┤ Building: 
    </span>
    <span
      className={null}
      style={null}
    >
      spoonerisms
    </span>
    <span
      className="ansi-blue"
      style={null}
    >
       ├──────────────────────────────────────────────
    </span>
  </code>
  <code
    className="logLine280"
  >
    <span
      className={null}
      style={null}
    >
          
    </span>
    <span
      className="ansi-blue"
      style={null}
    >
      STEP 1/3 — 
    </span>
    <span
      className={null}
      style={null}
    >
      Building Dockerfile: [docker.io/library/spoonerisms]
    </span>
  </code>
  <code
    className="logLine281"
  >
    <span
      className={null}
      style={null}
    >
          Building Dockerfile:
    </span>
  </code>
  <code
    className="logLine282"
  >
    <span
      className={null}
      style={null}
    >
            FROM node:10
    </span>
  </code>
  <code
    className="logLine283"
  />
  <code
    className="logLine284"
  >
    <span
      className={null}
      style={null}
    >
            ADD package.json /app/package.json
    </span>
  </code>
  <code
    className="logLine285"
  >
    <span
      className={null}
      style={null}
    >
            ADD yarn.lock /app/yarn.lock
    </span>
  </code>
  <code
    className="logLine286"
  >
    <span
      className={null}
      style={null}
    >
            RUN cd /app && yarn install
    </span>
  </code>
  <code
    className="logLine287"
  />
  <code
    className="logLine288"
  >
    <span
      className={null}
      style={null}
    >
            ADD src /app
    </span>
  </code>
  <code
    className="logLine289"
  />
  <code
    className="logLine290"
  >
    <span
      className={null}
      style={null}
    >
            ENTRYPOINT [ "node", "/app/index.js" ]
    </span>
  </code>
  <code
    className="logLine291"
  />
  <code
    className="logLine292"
  />
  <code
    className="logLine293"
  >
    <span
      className={null}
      style={null}
    >
          
    </span>
    <span
      className="ansi-blue"
      style={null}
    >
        │ 
    </span>
    <span
      className={null}
      style={null}
    >
      Tarring context…
    </span>
  </code>
  <code
    className="logLine294"
  >
    <span
      className={null}
      style={null}
    >
              ╎ Created tarball (size: 459 kB)
    </span>
  </code>
  <code
    className="logLine295"
  >
    <span
      className={null}
      style={null}
    >
          
    </span>
    <span
      className="ansi-blue"
      style={null}
    >
        │ 
    </span>
    <span
      className={null}
      style={null}
    >
      Building image
    </span>
  </code>
  <code
    className="logLine296"
  >
    <span
      className={null}
      style={null}
    >
          [Tiltfile] Beginning Tiltfile execution
    </span>
  </code>
  <code
    className="logLine297"
  >
    <span
      className={null}
      style={null}
    >
          [Tiltfile] Running \`"whoami"\`
    </span>
  </code>
  <code
    className="logLine298"
  >
    <span
      className={null}
      style={null}
    >
          [Tiltfile]        HI
    </span>
  </code>
  <code
    className="logLine299"
  >
    <span
      className={null}
      style={null}
    >
          [Tiltfile] Running \`"m4 -Dvarowner=dan "deploy/fe.yaml""\`
    </span>
  </code>
  <code
    className="logLine300"
  >
    <span
      className={null}
      style={null}
    >
          [Tiltfile] Running \`"m4 -Dvarowner=dan "deploy/vigoda.yaml""\`
    </span>
  </code>
  <code
    className="logLine301"
  >
    <span
      className={null}
      style={null}
    >
          [Tiltfile] Running \`"m4 -Dvarowner=dan "deploy/snack.yaml""\`
    </span>
  </code>
  <code
    className="logLine302"
  >
    <span
      className={null}
      style={null}
    >
          [Tiltfile] Running \`"m4 -Dvarowner=dan "deploy/doggos.yaml""\`
    </span>
  </code>
  <code
    className="logLine303"
  >
    <span
      className={null}
      style={null}
    >
          [Tiltfile] Running \`"m4 -Dvarowner=dan "deploy/fortune.yaml""\`
    </span>
  </code>
  <code
    className="logLine304"
  >
    <span
      className={null}
      style={null}
    >
          [Tiltfile] Running \`"m4 -Dvarowner=dan "deploy/hypothesizer.yaml""\`
    </span>
  </code>
  <code
    className="logLine305"
  >
    <span
      className={null}
      style={null}
    >
          [Tiltfile] Running \`"m4 -Dvarowner=dan "deploy/spoonerisms.yaml""\`
    </span>
  </code>
  <code
    className="logLine306"
  >
    <span
      className={null}
      style={null}
    >
          [Tiltfile] Running \`"m4 -Dvarowner=dan "deploy/emoji.yaml""\`
    </span>
  </code>
  <code
    className="logLine307"
  >
    <span
      className={null}
      style={null}
    >
          [Tiltfile] Running \`"m4 -Dvarowner=dan "deploy/words.yaml""\`
    </span>
  </code>
  <code
    className="logLine308"
  >
    <span
      className={null}
      style={null}
    >
          [Tiltfile] Running \`"m4 -Dvarowner=dan "deploy/secrets.yaml""\`
    </span>
  </code>
  <code
    className="logLine309"
  >
    <span
      className={null}
      style={null}
    >
          [Tiltfile] Running \`"m4 -Dvarowner=dan "deploy/job.yaml""\`
    </span>
  </code>
  <code
    className="logLine310"
  >
    <span
      className={null}
      style={null}
    >
          [Tiltfile] Running \`"m4 -Dvarowner=dan "deploy/sleeper.yaml""\`
    </span>
  </code>
  <code
    className="logLine311"
  >
    <span
      className={null}
      style={null}
    >
          [Tiltfile] Running \`"m4 -Dvarowner=dan "deploy/hello_world.yaml""\`
    </span>
  </code>
  <code
    className="logLine312"
  >
    <span
      className={null}
      style={null}
    >
          [Tiltfile] Running \`"m4 -Dvarowner=dan "deploy/tick.yaml""\`
    </span>
  </code>
  <code
    className="logLine313"
  >
    <span
      className={null}
      style={null}
    >
          vigoda      ┊ 2019/04/10 15:37:47 Server status: All good
    </span>
  </code>
  <code
    className="logLine314"
  >
    <span
      className={null}
      style={null}
    >
          [Tiltfile] WARNING: This Tiltfile is using k8s resource assembly version 1, which has been deprecated. It will no longer be supported after 2019-04-17. Sorry for the inconvenience! See https://tilt.dev/resource_assembly_migration.html for information on how to migrate.
    </span>
  </code>
  <code
    className="logLine315"
  >
    <span
      className={null}
      style={null}
    >
          [Tiltfile]
    </span>
  </code>
  <code
    className="logLine316"
  >
    <span
      className={null}
      style={null}
    >
          [Tiltfile] Successfully loaded Tiltfile
    </span>
  </code>
  <code
    className="logLine317"
  >
    <span
      className={null}
      style={null}
    >
          doggos      ┊ [doggos] 2019/04/10 15:37:45 Starting Doggos Service on :8083
    </span>
  </code>
  <code
    className="logLine318"
  >
    <span
      className={null}
      style={null}
    >
          doggos      ┊ [sidecar] I'm a loud sidecar! [Wed Apr 10 15:37:46 UTC 2019]
    </span>
  </code>
  <code
    className="logLine319"
  >
    <span
      className={null}
      style={null}
    >
          doggos      ┊ [sidecar] I'm a loud sidecar! [Wed Apr 10 15:37:48 UTC 2019]
    </span>
  </code>
  <code
    className="logLine320"
  >
    <span
      className={null}
      style={null}
    >
          doggos      ┊ [doggos] 2019/04/10 15:37:49 Heartbeat
    </span>
  </code>
  <code
    className="logLine321"
  >
    <span
      className={null}
      style={null}
    >
              ╎ [1/5] FROM docker.io/library/node:10
    </span>
  </code>
  <code
    className="logLine322"
  >
    <span
      className={null}
      style={null}
    >
              ╎ [2/5] ADD package.json /app/package.json
    </span>
  </code>
  <code
    className="logLine323"
  >
    <span
      className={null}
      style={null}
    >
              ╎ [3/5] ADD yarn.lock /app/yarn.lock
    </span>
  </code>
  <code
    className="logLine324"
  >
    <span
      className={null}
      style={null}
    >
              ╎ [4/5] RUN cd /app && yarn install
    </span>
  </code>
  <code
    className="logLine325"
  >
    <span
      className={null}
      style={null}
    >
              ╎ [5/5] ADD src /app
    </span>
  </code>
  <p
    className="logEnd"
  >
    █
  </p>
</section>
`;
